--- a/project/src/sass/g_out_mng.scss
+++ b/project/src/sass/g_out_mng.scss
@@ -5,7 +5,7 @@
 	margin-right: 26px;
 }
 .g_out_l_mg{
-	margin-left: -50px;
+	margin-left: -180px;
 	margin-top: 30px;
 	span+span+span+span{
 		margin-left: 15px;
@@ -14,17 +14,17 @@
 .circle_rb_2 {
     display: block;
     background-color: red;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
     margin: 0 auto;
 }
 .circle_gb_2{
 	display: block;
     background-color: green;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
     margin: 0 auto;
 }
 .widht80 {
