--- a/project/src/sass/c_sal_mng.scss
+++ b/project/src/sass/c_sal_mng.scss
@@ -14,6 +14,9 @@
 		margin: 0 7px;
 	}
 }
+.mb_5{
+	margin-bottom: 5px !important;
+}
 .l_wrap{
 	float: left;
 	>.section_1 {
@@ -84,15 +87,14 @@
             +li+li {
                position: relative;
                 .circle_rb {
-                    display: block;
-                    background-color: red;
-                    width: 20px;
-                    height: 20px;
-                    text-align: center;
-                    border-radius: 10px;
-                    position: absolute;
-                    top: 5px;
-                    left: 38px;
+                   	display: block;
+					background-color: red;
+					width: 10px;
+					height: 10px;
+					border-radius: 50%;
+					position: absolute;
+					top: 10px;
+					left: 45px;
                 }
             }
         }
@@ -149,6 +151,9 @@ form{
 			}
 		}
 	}
+}
+.min_h_376{
+	min-height: 376px;
 }
 /*//c_sal_mng_5*/
 
