--- a/project/src/sass/i_stat_als_1.scss
+++ b/project/src/sass/i_stat_als_1.scss
@@ -8,7 +8,8 @@
 	}
 	.col-1, .col-2, .col-3{float: left;padding-bottom: 8px;}
 	input[type="button"] {
-		padding: 1px 10px;
+		padding: 1px 6px;
+		font-size: 12px;
 	}
 	.col-1{
 		width:38%;
