[성룡]f_qua 전체 , g_out 전체 , i_stat_als_10 수정

--- a/project/src/sass/g_out_mng.scss
+++ b/project/src/sass/g_out_mng.scss
@@ -42,5 +42,6 @@
         }
     }
 }
-
+.btn_reflection {width: 50px; margin-left: 160px;}
+.mml_200 {margin-left: -200px;}
 .tag_tit{margin-top: 10px;}
