--- a/project/src/sass/f_qua_mng.scss
+++ b/project/src/sass/f_qua_mng.scss
@@ -128,18 +128,18 @@ input[type=text] {
 .circle_rb_2 {
     display: block;
     background-color: red;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
     margin: 0 auto;
 }
 
 .circle_gb_2 {
     display: block;
     background-color: green;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
     margin: 0 auto;
 }
 
