--- a/project/src/sass/f_qua_mng.scss
+++ b/project/src/sass/f_qua_mng.scss
@@ -68,7 +68,7 @@ input[type=text] {
 /* //f_qua_mag_1.css */
 
 
-/*f_qua_mag_1.css*/
+/*f_qua_mag_2.css*/
 
 .f_qua_mng_2_1 {
     label {
@@ -105,8 +105,8 @@ input[type=text] {
     }
 }
 
-
-/*//f_qua_mag_1.css*/
+textarea {resize: none; width: 100%; height: 200px;}
+/*//f_qua_mag_2.css*/
 
 
 /* f_qua_mag_3.css */
