[김영은] 수정파일 + PPT파일 포함

--- a/project/src/sass/c_sal_mng.scss
+++ b/project/src/sass/c_sal_mng.scss
@@ -3,7 +3,7 @@
 .produc_sj{
 	label{
 		display: inline-block;
-		width: 65px;
+		width: 60px;
 	}
 }
 .pb_3{
@@ -152,8 +152,11 @@ form{
 		}
 	}
 }
-.min_h_376{
-	min-height: 376px;
+.min_h_353{
+	min-height: 353px;
+}
+.min_h_300{
+	min-height: 300px;
 }
 /*//c_sal_mng_5*/
 
