--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -40,6 +40,21 @@ table {
 	}	
 	&.w_350 {
 		width:350px !important;
+	}	
+	&.w_400 {
+		width:400px !important;
+	}	
+	&.w_450 {
+		width:450px !important;
+	}	
+	&.w_500 {
+		width:500px !important;
+	}
+	&.w_600 {
+		width:600px !important;
+	}
+	&.w_700 {
+		width:700px !important;
 	}
 }
 table.dataTable.nowrap th,table.dataTable.nowrap td {
