--- a/project/src/sass/i_stat_als_1.scss
+++ b/project/src/sass/i_stat_als_1.scss
@@ -1,12 +1,17 @@
 @charset "utf-8";
 .progress_wrap{
 	position: relative;
+	h3{
+		color: #25455d;
+		font-weight: bold
+	}
 	.tit_progress{
 		position:absolute;
 		right: 280px;
 		top:-10px;
+		font-weight: bold;
 	}
-	.col-1, .col-2, .col-3{float: left;padding-bottom: 8px;}
+	.col-1, .col-2, .col-3{float: left;padding-bottom: 5px;}
 	input[type="button"] {
 		padding: 1px 6px;
 		font-size: 12px;
@@ -21,16 +26,17 @@
 	}
 	.col-3{
 		width:40%;
-		padding-top:3px;
+		padding-top:4px;
 		.graph_1{
 			position: relative;
 			border: 1px solid #aaa;
-			height: 19px;
+			height: 15px;
 			overflow: hidden;
+			border-radius:30px;
 			span{
 				position: absolute;
 				display: inline-block;
-				background-color: #f00;
+				background-color: #4484b1;
 				top: 0;
 				left: 0;
 				height:20px;
@@ -38,6 +44,21 @@
 
 			}
 		}	
+	}
+	.g_2 {
+		.graph_1  span{
+			background-color: #74b688 !important;
+		}
+	}
+	.g_3 {
+		.graph_1  span{
+			background-color: #63667d !important;
+		}
+	}
+	.g_4 {
+		.graph_1  span{
+			background-color: #949a51 !important;
+		}
 	}
 	> ul > li{overflow: hidden;}
  }
