[창호]최종수정

--- a/project/src/sass/h_cmn_pop.scss
+++ b/project/src/sass/h_cmn_pop.scss
@@ -4,11 +4,11 @@
   width: 150px!important;
 }
 .noback{
-  text-align: inherit;
+  text-align: left;
   background: none!important;
 }
 .w200{
-  width: 200px!important;
+  width: 20%!important;
 }
 .h300{
   height: 300px!important;
