--- a/project/src/sass/e_mat_mng.scss
+++ b/project/src/sass/e_mat_mng.scss
@@ -16,11 +16,14 @@
 .ml12{
   margin-left: -12px!important;
 }
-.pr33{
-  padding-right: 33px!important;
+.pr32{
+  padding-right: 32px!important;
 }
-.pr26{
-  padding-right:26px!important;
+.pr24{
+  padding-right:24px!important;
+}
+.pr27{
+  padding-right:27px!important;
 }
 .pl40{
   padding-left: 40px!important;
