[김영은] 수정완료

--- a/project/src/sass/c_sal_mng.scss
+++ b/project/src/sass/c_sal_mng.scss
@@ -158,6 +158,9 @@ form{
 .min_h_300{
 	min-height: 300px;
 }
+.max_h_init{
+	min-height: none !important;
+}
 /*//c_sal_mng_5*/
 
 /*//c_sal_mng_7*/
