--- a/project/src/sass/i_stat_als_sch.scss
+++ b/project/src/sass/i_stat_als_sch.scss
@@ -16,13 +16,10 @@
   padding-left: 15px;
 }
 .pr36{
-  padding-right: 36px!important
-<<<<<<< HEAD
-=======
+  padding-right: 36px!important;
 }
 .pr39{
-  padding-right: 39px!important
->>>>>>> 27a75cb0c5850b83b03a56c26fa2fb15e97065b4
+  padding-right: 39px!important;
 }
 .pt28{
   padding-top: 26px!important;
