--- a/project/src/sass/sub_main_2.scss
+++ b/project/src/sass/sub_main_2.scss
@@ -1,10 +1,12 @@
 @charset "utf-8";
 html,body, #wrap{height:100%;overflow:hidden;background-color:#ececec;}
-#header{background-color:#ececec;border:1px solid #dcdcdc;border-bottom-width:2px;height:70px;position:absolute;width:100%;z-index:1;}
+#header{background-color:#ececec;border:1px solid #dcdcdc;border-bottom-width:2px;height:30px;/*height:70px;*/position:absolute;width:100%;z-index:1;}
+.header_logo{position:absolute;left:10px;top:0;z-index:1;}
+.header_logo img{width:40px;}
 #header nav{min-width:1024px;background:#628299 url(../images/sub_main/bg_gnb.png) repeat-x 0 0;height:30px;position:absolute;bottom:0;left:0;width:100%;}
 #header nav>ul{width:1024px;margin: 0 auto;}
 #header nav>ul>li{height:30px;line-height:30px;float:left;width:12.5%;position:relative;}
-#header nav>ul>li>a{color:#fff;display:inline-block;padding:0 20px;height:30px;}
+#header nav>ul>li>a{color:#fff;display:inline-block;padding:0 20px;height:30px;font-size:13px;}
 #header nav>ul>li>a.on,#header nav>ul>li>a:hover,#header nav>ul>li>a:focus{color:#12ffd5;background:url(../images/sub_main/bg_gnb_ov.png) 0 0 repeat-x;}
 #header nav>ul>li>a.on{color:#fdca00;}
 #header nav>ul ul{display: none;position:absolute;min-width:240px;padding:5px 0;left:50%;margin-left:-120px;top:30px;border:1px solid #eee;border-radius:3px;box-shadow:0 3px 7px rgba(0,0,0,0.8);}
@@ -15,8 +17,14 @@ html,body, #wrap{height:100%;overflow:hidden;background-color:#ececec;}
 #header nav>ul ul li a.on{color:#243E52;font-weight:bold;}
 #header nav>ul ul li a:before{content:"";display:inline-block;width:7px;height:1px;background-color:#999;vertical-align:middle;margin-right:5px;}
 #header nav>ul ul:after{content:"";display:block;position:absolute;left:0;top:0;width:100%;height:100%;background-color:#fff;opacity:0.8;z-index:2;}
+#header .login_wrap{
+	position:absolute;right:-50px;top:0;
+	a{
+		color:#fff;
+	}
+}
 #container{height:100%;}
 #lnb_wrap{height:100%;width:180px;padding:110px 10px 10px;background-color:#628299;color:#fff;border:1px solid #dcdcdc;position:absolute;left:0;top:0;}
-#contents{width:100%;height:100%;background-color:#dcdcdc;padding-top:70px;}
+#contents{width:100%;height:100%;background-color:#dcdcdc;padding-top:25px;}
 #contents>iframe{width:100%;height:100%;}
 .sub_frame_st2{/*width:1280px !important;margin:0 auto;*/}
