[강림]생산페이지 수정

--- a/project/src/sass/d_prd_mng.scss
+++ b/project/src/sass/d_prd_mng.scss
@@ -95,7 +95,7 @@
 	border-radius:50%;
 }
 .d_h_1{min-height:327px;}
-.d_h_2{min-height:246px;}
+.d_h_2{min-height:274px;}
 /*//d_common*/
 
 /*d_prd_mng_1*/
@@ -224,7 +224,8 @@
 .d_6_margin{margin:5px;}
 .grid .row>.section_1>.d_6_pb1{padding-bottom:3px;}
 #produc_code_1_1.d_6_w,#produc_code_1_2.d_6_w{width:73px;}
-#acc_num_1_1.d_6_w2{width:51px;}
+#acc_num_1_1.d_6_w2{width:45px;}
+.d_6_w3{width:110px;}
 .grid .row>.section_1>.d_6_pb2{padding-bottom:4px;}
 .d_6_h{height:300px;}
 /*//d_prd_mng_6*/
