--- a/project/src/sass/e_mat_mng.scss
+++ b/project/src/sass/e_mat_mng.scss
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 // e_mat_mng_1
 /* f_qua_mag_1.css */
+.w1000{
+  width: 1000px!important;
+  margin: 0 auto;
+}
 .pl5{
   padding-left: 5px!important;
 }
@@ -43,9 +47,6 @@
 .w70{
   width: 70px!important;
 }
-input[type=text] {
-    text-align: right;
-}
 .grid .col_7{
   width: 100%;
 }
@@ -58,7 +59,7 @@ input[type=text] {
     .row_box {
         margin-bottom: 30px;
     }
-    div >p {
+    div>p {
         height: 26px;
         line-height: 26px;
         float: left;
