--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 $tb_color_1:#4e6678;
+$font_c_1:#fff;
 $td_height:24px;
 *{margin:0;padding:0;box-sizing:border-box;}
 *:after, *:before{box-sizing:border-box;}
@@ -67,7 +68,7 @@ table {
 	}
 }
 table.dataTable.nowrap th,table.dataTable.nowrap td {
-    white-space: nowrap
+    white-space: nowrap;
 }
 .pBoth_7{padding-left:7px !important;padding-right:7px !important;}
 .pb_10{padding-bottom:10px !important;}
@@ -228,7 +229,7 @@ th{
 	padding:0 10px;
 	height:25px;
 	background-color:$tb_color_1;
-	color:#fff;
+	color:$font_c_1;
 	&.bgColor_1{
 		background-color:#dfdfdf;
 		color:#2c496f;
@@ -261,6 +262,9 @@ td {
 	padding:0 10px;
 	border-bottom:1px solid #aaa;
 	text-align:center;
+	input[type=text]{
+		max-width:90%;
+	}
 	&.ta_l{
 		text-align:left;
 	}
@@ -273,7 +277,7 @@ td {
 	span.checkbox, span.radio{margin:0 !important;}
 }
 .basic_table_column_1 {
-	border:1px solid #ccc;
+	/*border:1px solid #ccc;*/
 	border-radius:2px;
 	overflow:hidden;
 	margin-bottom:8px;
@@ -321,9 +325,6 @@ td {
 		}
 		td{
 			min-width:70px;
-			input[type=text]{
-				min-width:100%;
-			}
 		}
 	}
 }
@@ -386,7 +387,7 @@ td {
 			}
 			&.tit_col {
 				background-color:$tb_color_1;
-				color: #fff;
+				color: $font_c_1;
 				text-align: center
 			}
 		}
@@ -394,6 +395,9 @@ td {
 	td{
 		background:#f5f5f5;
 		padding:5px 10px;
+		input[type="text"]{
+				float: left
+		}
 	}
 	&.frm_input{
 		td{
@@ -798,7 +802,7 @@ span {
   top:50px;
   margin-left:-350px;
   /*transform:translateY(-50%);*/
-  background-color:#fff;
+  background-color:$font_c_1;
   border-radius:5px;
   box-shadow:0 3px 10px rgba(0,0,0,0.5);
 }
@@ -829,7 +833,7 @@ span {
 			border-bottom:none;
 			margin:0 3px;
 			border-radius:3px 3px 0 0;
-			background-color: #fff;
+			background-color:#fff;
 			&.on{
 				background:#333;
 				color:#fff;
