--- a/project/src/sass/sub_main_2.scss
+++ b/project/src/sass/sub_main_2.scss
@@ -21,6 +21,9 @@ html,body, #wrap{height:100%;overflow:hidden;background-color:#ececec;}
 	position:absolute;right:-50px;top:0;
 	a{
 		color:#fff;
+		&:hover, &:focus{
+			color: #fdca00;
+		}
 	}
 }
 #container{height:100%;}
