--- a/project/src/sass/common.scss
+++ b/project/src/sass/common.scss
@@ -396,9 +396,9 @@ td {
 	td{
 		background:#f5f5f5;
 		padding:5px 10px;
-		input[type="text"]{
+		/*input[type="text"], *{
 				float: left
-		}
+		}*/
 	}
 	&.frm_input{
 		td{
