--- a/project/src/sass/f_qua_mng.scss
+++ b/project/src/sass/f_qua_mng.scss
@@ -81,6 +81,9 @@ input[type=text] {
         margin-right: 13px;
     }
 }
+.mr_36{
+    margin-right: 36px !important;
+}
 .mml_80{
     margin-left: -80px;
 }
