--- a/project/src/sass/d_prd_mng.scss
+++ b/project/src/sass/d_prd_mng.scss
@@ -237,7 +237,12 @@
 /*//d_prd_mng_8*/
 
 /*d_prd_mng_9*/
-.d_9_txt_c{text-align:center;}
+.d_9_txt_c{
+	text-align:center;
+	img{
+		width: 50%;
+	}
+}
 .d_9_mt{margin-top:20px;}
 .d_9_w1{width:100px !important;}
 .d_9_w2{width:50px !important;}
@@ -248,4 +253,9 @@
 	border-bottom:1px solid #afafaf;
 }
 .d_9_after_2:after{display:none;}
+.w600ml180{
+	width: 800px !important;
+	margin-left: 180px;
+}
+
 /*//d_prd_mng_9*/
