[김영은] 다시수정 d 9

--- a/project/src/sass/d_prd_mng.scss
+++ b/project/src/sass/d_prd_mng.scss
@@ -253,9 +253,8 @@
 	border-bottom:1px solid #afafaf;
 }
 .d_9_after_2:after{display:none;}
-.w600ml180{
+.w600{
 	width: 800px !important;
-	margin-left: 180px;
 }
 
 /*//d_prd_mng_9*/
